--- a/main.kv
+++ b/main.kv
@@ -5,6 +5,9 @@
 <CheckboxRange>:
     group: "range_of_pages"
     size_hint_x: .1
+#    size_hint_x: None
+#    size: dp(37), dp(37)
+    pos_hint_x: {"right": .5}
 
 <Container>:
     orientation: "vertical"
@@ -12,63 +15,89 @@
 
     BoxLayout:
         orientation: "vertical"
+#        size_hint_y: .8
+        canvas:
+            Color:
+                rgba: 0, 1, 0, 1
+            Rectangle:
+                pos: self.pos
+                size: self.size
+        MDTextField:
+            id: tf_lang
+            size_hint_x: None
+            width: dp(150)
+            pos_hint: {"center_x": .5, "top": 0}
+            hint_text: "Language:"
+            on_focus: if self.focus: app.menu_lang.open()
+        MDLabel:
+            id: lbl_print
+            text: "Print:"
+            text_size: self.size
+            halign: "center"
+            valign: "bottom"
+            size_hint_x: None
+            width: dp(200)
+            pos_hint: {"center_x": .5, "top": 0}
         BoxLayout:
-            size_hint_y: .3
+#            size_hint_x: None
+#            width: dp(400)
+            size_hint_y: .6
+            pos_hint: {"x": .40, "top": 0}
+            CheckboxRange:
+                active: True
+            MDLabel:
+                text: "All pages"
+                text_size: self.size
+                halign: "left"
+                valign: "center"
+                pos_hint_x: {"x": .5}
+#                size_hint_x: .9
+        BoxLayout:
+#            size_hint_x: None
+#            width: dp(400)
+            size_hint_y: .6
+            pos_hint: {"x": .40, "top": 0}
+            CheckboxRange:
+            MDLabel:
+                text: "The range"
+                text_size: self.size
+                halign: "left"
+                valign: "center"
+                pos_hint_x: {"x": .5}
+#                size_hint_x: .9
+        Widget:
+        BoxLayout:
+#            size_hint_x: None
+#            width: dp(400)
+            size_hint_y: .7
+            pos_hint: {"x": .20, "top": 0}
             canvas:
                 Color:
                     rgba: 1, 1, 0, 1
                 Rectangle:
                     pos: self.pos
                     size: self.size
-            Widget:
-            MDTextField:
-                canvas.before:
-                    Color:
-                        rgba: 1, 0, 0, 1
-                    Rectangle:
-                        pos: self.pos
-                        size: self.size
-                id: tf_lang
-                size_hint_x: .3
-                pos_hint_y: {"y": 0}
-                hint_text: "Language:"
-                on_focus: if self.focus: app.menu_lang.open()
-            Widget:
-        BoxLayout:
-            size_hint_y: .1
-            Widget:
             MDLabel:
-                text: "Print:"
+                text: "The first page: "
                 text_size: self.size
-                halign: "center"
-                valign: "bottom"
-                size_hint_x: .3
-            Widget:
+                halign: "left"
+                valign: "center"
+                pos_hint_x: {"x": .5}
+#                size_hint_x: .9
         BoxLayout:
-            orientation: "vertical"
-            size_hint_y: .2
-            BoxLayout:
-                Widget:
-                CheckboxRange:
-                    active: True
-                MDLabel:
-                    text: "All pages"
-                    text_size: self.size
-                    halign: "left"
-                    valign: "center"
-                    size_hint_x: .3
-                Widget:
-            BoxLayout:
-                Widget:
-                CheckboxRange:
-                MDLabel:
-                    text: "The range"
-                    text_size: self.size
-                    halign: "left"
-                    valign: "center"
-                    size_hint_x: .3
-                Widget:
-        Widget:
+#            size_hint_x: None
+#            width: dp(400)
+            size_hint_y: .7
+            pos_hint: {"x": .20, "top": 0}
+            MDLabel:
+                text: "The last page: "
+                text_size: self.size
+                halign: "left"
+                valign: "center"
+                pos_hint_x: {"x": .5}
+#                size_hint_x: .9
+
+    Widget:
 #            canvas:
 #                Color:
 #                    rgba: 0, 1, 0, 1
